blockml/test/errors/11_report/e133/e133d.dashboard
dashboard: e133d
title: 'sales'
reports:
- title: 'overview'
  unk: 5         
  model: e133m
  select:
  - a.dim1
  type: 'bar_vertical'
  data:
    x_field: a.dim1
    y_field: a.dim1
